# QCustomPlotWithCMake

./: .gitignore  README.md
src/: CMakeLists.txt  mainwindow.h
